Divide into four versions, each in one file

--- a/avalur_cv_detailed.tex
+++ b/avalur_cv_detailed.tex
@@ -15,20 +15,13 @@
 
 \usepackage{fontawesome}	% иконки скайпа, телефона, ... http://ctan.sharelatex.com/tex-archive/fonts/fontawesome/doc/fontawesome.pdf
 
-\newif\ifdetailed
 
-% для полной версии резюме — detailedtrue, для сокращенной — detailedfalse
-%\detailedtrue
-\detailedfalse
-
-\ifdetailed
 % в полной версии много букв, поэтому поплотнее
 \setstretch{0.8}
-\fi
 
 \begin{document}
 
-\noindent {\Huge{\textbf{   Александр Авдюшенко   }}}%
+\noindent {\Huge{\textbf{Александр Авдюшенко}}}
 
 \vspace{0.5em}
 
@@ -42,10 +35,9 @@
 \noindent {\textbf{Опыт работы}}
 \begin{longtable} {l | p{0.85\textwidth}}
 2019 — н.в. & {\textbf{\href{https://spbu.ru}{Санкт-Петербургский государственный университет}, Факультет математики и компьютерных наук, доцент и руководитель программы по анализу данных}} \\
-\ifdetailed
 &
 \begin{itemize}
-	\item с 2019 — руководитель новой образовательной программы бакалавриата \href{https://maad.compscicenter.ru}{<<Науки о данных>>} (до 2021 — <<Математика, алгоритмы и анализ данных>>), созданной в сотрудничестве с Яндексом на факультете математики и компьютерных наук СПбГУ.
+	\item с 2019 — руководитель новой образовательной программы бакалавриата \href{https://maad.compscicenter.ru}{<<Науки о данных>>} (до 2021 — <<Математика, алгоритмы и анализ данных>>), созданной в партнёрстве с Яндексом на факультете математики и компьютерных наук СПбГУ.
 
 	Программа сочетает фундаментальное математическое образование с изучением современного программирования и машинного обучения. Студентам предлагаются темы научных исследований, связанные с разработками ведущих компаний в ИТ. Программа сразу стала популярной среди мотивированных абитуриентов: в 2019 году конкурс был около 25 человек на место. Практически все бюджетные места заполняются победителями и призёрами олимпиад по математике и информатике, включая заключительный этап Всероссийской олимпиады школьников и международную олимпиаду по математике (IMO).
 
@@ -66,33 +58,19 @@
 	\item 2021-2022 — читаю \href{https://github.com/spbu-math-cs/ml-course/}{годовой курс по машинному обучению}
 \end{itemize}
 \\
-\else
-& {В 2019 запустил образовательную программу бакалавриата \href{https://maad.compscicenter.ru}{<<Науки о данных>>}, сразу ставшей популярной среди самых лучших абитуриентов России. В 2020 создал с нуля на грант министерства образования РФ \href{https://gsom.spbu.ru/all_news/event2021-02-04/}{Международный научно-методический центр СПбГУ}. Читаю \href{https://github.com/spbu-math-cs/ml-course/}{годовой курс по машинному обучению} и провожу традиционные \href{https://sochisirius.ru/obuchenie/nauka/smena1078/5204}{смены в Сириусе}.} \\
-\\
-\fi
-\\
 2013 — н.в. & {\textbf{\href{https://compscicenter.ru}{Яндекс, CS center/Школа анализа данных}, куратор академических программ}} \\
-\ifdetailed
 &
 \begin{itemize}
 	\item 2013 — запустил филиал \href{https://yandexdataschool.ru}{ШАД} в Новосибирске. C 2016 по 2018 гг. в сумме 16 выпускников
 	\item 2017 — в сотрудничестве с компанией JetBrains расширил филиал ШАДа до отделения \href{https://compscicenter.ru}{Computer science center}
 	\item 2019 — преподаватель и руководитель на \href{https://sochisirius.ru/obuchenie/graduates/smena240/1174}{<<Интенсивном проектном практикуме для разработчиков от Сириуса, Яндекса и ФКН ВШЭ>>}
 \end{itemize} \\
-\else
-& {В 2013 запустил филиал ШАД в Новосибирске. В 2017 в сотрудничестве с компанией Jetbrains расширил филиал ШАДа до отделения \href{https://compscicenter.ru}{Computer science center}. В 2019 провел \href{https://sochisirius.ru/obuchenie/graduates/smena240/1174}{<<Интенсивный проектный практикум для разработчиков от Сириуса, Яндекса и ФКН ВШЭ>>}} \\
-\\
-\fi
 
-\ifdetailed
 \end{longtable}
 \newpage
 \begin{longtable} {l | p{0.85\textwidth}}
-\\
-\fi
 
 2015 — 2018 & {\textbf{\href{https://yandex.ru/}{Яндекс}, аналитик-разработчик (data scientist)}} \\
-\ifdetailed
 &
 \begin{itemize}
 	\item реализовал ежедневный расчет поатрибутной (наличие организации, её название, адрес, время работы...) метрики точности базы организаций Яндекса
@@ -100,13 +78,8 @@
 	\item дважды повысил точность организаций Справочника на 2\% и 3\%, выделив из потерь наиболее крупные проблемы и исправив их: аналитическая поддержка процесса обхода компаний с недоступными телефонами; повышение точности времени работы организаций их приоритетной актуализацией операторами колл-центров
 \end{itemize}
 \\
-\else
-& {Дважды повысил точность организаций Справочника на 2\% и 3\% (главная цель команды). Автоматизировал и оптимизировал процессы актуализации данных в колл-центрах и в Толоке. Работал в группе из 6 человек: машинное обучение, разработка на Java, SQL, Python, немного С++; catboost.} \\
-\\
-\fi
 
 2009 — 2015 & {\textbf{\href{http://www.ict.nsc.ru}{Институт вычислительных технологий СО РАН}, аспирант, научный сотрудник}}\\
-\ifdetailed
 &
 \begin{itemize}
 	\item обобщил на нестационарную геометрию метод решения трехмерных уравнений Рейнольдса движения несжимаемой жидкости
@@ -115,20 +88,13 @@
 	\item опубликовал 19 научных работ (4 статьи, 13 тезисов, 2 патента), защитив в итоге \href{https://github.com/avalur/dissertation/blob/master/to_print/autoref_Avdyushenko.pdf}{кандидатскую диссертацию <<Новые численные модели гидродинамики турбомашин>>}
 \end{itemize}
 \\
-\else
-& {Разработал новую численную модель, учитывающую изменение во времени геометрии проточного тракта гидротурбины. Ускорил расчеты имеющимся в лаборатории комплексом программ на языке Fortran в 16 раз (MPI по блокам), и ещё в 7 раз (OpenMP-потоки внутри блока). Защитил \href{https://github.com/avalur/dissertation/blob/master/to_print/autoref_Avdyushenko.pdf}{кандидатскую диссертацию <<Новые численные модели гидродинамики турбомашин>>}.} \\
-\\
-\fi
 
-\ifdetailed
 2008 — 2014 & {\href{http://sesc.nsu.ru}{Специализированный учебно-научный центр НГУ}, преподаватель математики}\\
 2006 — 2017 & {организатор и член Жюри математических олимпиад: Всероссийская, Всесибирская, Турнир городов}\\
 2010 — 2013 & {\href{https://www.sovenok.academy/}{мат. кружок Совёнок}, организатор и преподаватель}\\
-\fi
 
 \end{longtable}
 
-\ifdetailed
 \noindent {\textbf{Навыки}}
 \begin{longtable} {p{0.5\textwidth}p{0.5\textwidth}}
 \vspace{-2.2em}
@@ -148,7 +114,6 @@
 \end{itemize}
 \\
 \end{longtable}
-\fi
 
 \vspace{-0.5em}
 
@@ -159,16 +124,14 @@
 2003 — 2009	& \href{https://www.nsu.ru/n/mathematics-mechanics-department/}{НГУ, механико-математический факультет} & математика & магистр \vspace{0.5em}\\
 \end{longtable}
 
-\ifdetailed
 \noindent {\textbf{Онлайн-курсы \vspace{-0.5em}}}
 \begin{longtable} {cp{0.35\textwidth}p{0.38\textwidth}l}
 2017 & Coursera, University of Washington & Programming Languages, parts A, B, C & 	сертификат \vspace{0.5em}\\
 2019 & Coursera, HSE University & How to Win a Data Science Competition: Learn from Top Kagglers & сертификат \vspace{0.5em}\\
 \end{longtable}
-\fi
 
 \noindent {\textbf{Вне работы}}
 
-Люблю проводить время с женой и дочкой, стараюсь по возможности регулярно заниматься спортом (плавание, скалолазание), есть в \href{https://www.instagram.com/ovalur/}{Insragram}
+\vspace{0.5em} Люблю проводить время с женой и дочкой, стараюсь по возможности регулярно заниматься спортом (плавание, скалолазание), есть в \href{https://www.instagram.com/ovalur/}{Insragram}
 
-\end{document}             % End of document.
+\end{document}
