Minor improvements in ML course info

--- a/avalur_cv_en_detailed.tex
+++ b/avalur_cv_en_detailed.tex
@@ -52,7 +52,7 @@ s
 
   \item 2021 — all budget positions of the Data Science program are filled with winners of All-Russian Olympiads, including two winners of the International Olympiad in Mathematics
 
-  \item 2021-2022 — I created and read \href{https://github.com/spbu-math-cs/ml-course/}{one year machine learning course}
+  \item 2021-2022 — I created and teach \href{https://github.com/spbu-math-cs/ml-course/}{one year machine learning course} with modern ML approaches.
 \end{itemize}
 \\
 2015 — 2018 & {\textbf{\href{https://yandex.ru/}{Yandex}, data scientist}} \\
@@ -129,6 +129,6 @@ s
 \vspace{-2em}
 \noindent{\textbf{Out of work}}
 
-I like to spend time with my wife and daughter, I try to do sports regularly (swimming, climbing) whenever possible and I have the \href{https://www.instagram.com/ovalur/}{Insragram}
+I like to spend time with my wife and daughter, and I have the \href{https://www.instagram.com/ovalur/}{Insragram}
 
 \end{document}
