--- a/avalur_cv_en_one_page.tex
+++ b/avalur_cv_en_one_page.tex
@@ -33,7 +33,7 @@
 
 2019 — present & {\textbf{\href{https://spbu.ru}{Saint Petersburg State University}, Department of Mathematics and Computer Science, Associate Professor and head of the educational program in <<Data Science>>}} \\
 
-& {In 2019 I launched an educational bachelor's program \href{https://maad.compscicenter.ru}{<<Data Science>>}, which immediately became popular among the best applicants in Russia. In 2020, I created from scratch  \href{https://gsom.spbu.ru/all_news/event2021-02-04/}{International Scientific and Methodological Center of St. Petersburg State University} (Russian Ministry of Education grant). I created and read \href{https://github.com/spbu-math-cs/ml-course/}{one year machine learning course}.} \\
+& {In 2019 I launched an educational bachelor's program \href{https://maad.compscicenter.ru}{<<Data Science>>}, which immediately became popular among the best applicants in Russia. In 2020, I created from scratch \href{https://gsom.spbu.ru/all_news/event2021-02-04/}{International Scientific and Methodological Center of St. Petersburg State University} (Russian Ministry of Education grant). I created and teach \href{https://github.com/spbu-math-cs/ml-course/}{one year machine learning course} with modern ML approaches.} \\
 
 2015 — 2018 & {\textbf{\href{https://yandex.ru/}{Yandex}, data scientist}} \\
 & {I increased the accuracy of the organizations database twice by 2\% and 3\% (the main goal of the team). I automated and optimized data update processes in call centers and in \href{https://toloka.yandex.ru}{Yandex.Toloka}. I worked in a group of six data scientists: development in Java, SQL, Python, a little bit of C++; catboost.}\\
@@ -90,6 +90,6 @@
 \vspace{-2em}
 \noindent{\textbf{Out of work}}
 
-I like to spend time with my wife and daughter, I try to do sports regularly (swimming, climbing) whenever possible and I have the \href{https://www.instagram.com/ovalur/}{Insragram}
+I like to spend time with my wife and daughter, and I have the \href{https://www.instagram.com/ovalur/}{Insragram}
 
 \end{document}
