Add students evaluation of teaching

--- a/avalur_cv_detailed.tex
+++ b/avalur_cv_detailed.tex
@@ -55,7 +55,7 @@
 
 	\item 2021 — все бюджетные места программы <<Науки о данных>> заполняются олимпиадниками-всеросами, включая двух победителей международной олимпиады по математике
 
-	\item 2021-2022 — читаю \href{https://github.com/spbu-math-cs/ml-course/}{годовой курс по машинному обучению}
+	\item 2021-2022 — читаю \href{https://github.com/spbu-math-cs/ml-course/}{годовой курс машинного обучения} по современным подходам. Средняя студенческая оценка преподавания — 4,78 из 5,0.
 \end{itemize}
 \\
 2013 — н.в. & {\textbf{\href{https://compscicenter.ru}{Яндекс, CS center/Школа анализа данных}, куратор академических программ}} \\
