Add summary and link to my github

--- a/avalur_cv_detailed.tex
+++ b/avalur_cv_detailed.tex
@@ -26,17 +26,21 @@
 \vspace{0.5em}
 
 \noindent Санкт-Петербург, Россия $\bullet$ \href{mailto:ovalur@gmail.com}{ovalur@gmail.com} \faMobile~+7 913 718 53 78 \faSendO~ovalur
-% \faGithub
+\faGithub~avalur
 
 \vspace{0.5em}
 \hrule
 \vspace{0.5em}
 
+У меня разнообразный опыт работы в науке, индустрии и организации образовательных проектов. Люблю машинное обучение и работу с людьми.
+
+\vspace{0.5em}
 \noindent {\textbf{Опыт работы}}
 \begin{longtable} {l | p{0.85\textwidth}}
 2019 — н.в. & {\textbf{\href{https://spbu.ru}{Санкт-Петербургский государственный университет}, Факультет математики и компьютерных наук, доцент и руководитель программы по анализу данных}} \\
 &
 \begin{itemize}
+	\vspace{-1.5em}
 	\item с 2019 — руководитель новой образовательной программы бакалавриата \href{https://maad.compscicenter.ru}{<<Науки о данных>>} (до 2021 — <<Математика, алгоритмы и анализ данных>>), созданной в партнёрстве с Яндексом на факультете математики и компьютерных наук СПбГУ.
 
 	Программа сочетает фундаментальное математическое образование с изучением современного программирования и машинного обучения. Студентам предлагаются темы научных исследований, связанные с разработками ведущих компаний в ИТ. Программа сразу стала популярной среди мотивированных абитуриентов: в 2019 году конкурс был около 25 человек на место. Практически все бюджетные места заполняются победителями и призёрами олимпиад по математике и информатике, включая заключительный этап Всероссийской олимпиады школьников и международную олимпиаду по математике (IMO).
@@ -55,12 +59,13 @@
 
 	\item 2021 — все бюджетные места программы <<Науки о данных>> заполняются олимпиадниками-всеросами, включая двух победителей международной олимпиады по математике
 
-	\item 2021-2022 — читаю \href{https://github.com/spbu-math-cs/ml-course/}{годовой курс машинного обучения} по современным подходам. Средняя студенческая оценка преподавания — 4,78 из 5,0.
+	\item 2021-2022 — читаю \href{https://github.com/spbu-math-cs/ml-course/}{годовой курс машинного обучения} по современным подходам. Средняя студенческая оценка преподавания — 4,78 из 5,0
 \end{itemize}
 \\
 2013 — н.в. & {\textbf{\href{https://compscicenter.ru}{Яндекс, CS center/Школа анализа данных}, куратор академических программ}} \\
 &
 \begin{itemize}
+	\vspace{-1.5em}
 	\item 2013 — запустил филиал \href{https://yandexdataschool.ru}{ШАД} в Новосибирске. C 2016 по 2018 гг. в сумме 16 выпускников
 	\item 2017 — в сотрудничестве с компанией JetBrains расширил филиал ШАДа до отделения \href{https://compscicenter.ru}{Computer science center}
 	\item 2019 — преподаватель и руководитель на \href{https://sochisirius.ru/obuchenie/graduates/smena240/1174}{<<Интенсивном проектном практикуме для разработчиков от Сириуса, Яндекса и ФКН ВШЭ>>}
@@ -73,6 +78,7 @@
 2015 — 2018 & {\textbf{\href{https://yandex.ru/}{Яндекс}, аналитик-разработчик (data scientist)}} \\
 &
 \begin{itemize}
+	\vspace{-1.5em}
 	\item реализовал ежедневный расчет поатрибутной (наличие организации, её название, адрес, время работы...) метрики точности базы организаций Яндекса
 	\item автоматизировал и оптимизировал процессы актуализации данных в колл-центрах и в \href{https://toloka.yandex.ru}{Яндекс.Толоке}. В частности, на 20\% улучшил эффективность актуализации, применив catboost для предсказания вероятности закрытия организации
 	\item дважды повысил точность организаций Справочника на 2\% и 3\%, выделив из потерь наиболее крупные проблемы и исправив их: аналитическая поддержка процесса обхода компаний с недоступными телефонами; повышение точности времени работы организаций их приоритетной актуализацией операторами колл-центров
@@ -82,6 +88,7 @@
 2009 — 2015 & {\textbf{\href{http://www.ict.nsc.ru}{Институт вычислительных технологий СО РАН}, аспирант, научный сотрудник}}\\
 &
 \begin{itemize}
+	\vspace{-1.5em}
 	\item обобщил на нестационарную геометрию метод решения трехмерных уравнений Рейнольдса движения несжимаемой жидкости
 	\item ускорил расчеты в 16 раз, распараллелив алгоритм по блокам расчетной области с использованием MPI для процессов с распределенной памятью (улучшение имеющегося в лаборатории комплекса программ на языке Fortran, $\sim$30 тыс. строк кода)
 	\item ускорил ещё в 7 раз, распараллелив алгоритм в одном блоке с использованием OpenMP-потоков с общей памятью
