--- a/avalur_cv_one_page.tex
+++ b/avalur_cv_one_page.tex
@@ -29,18 +29,21 @@
 \hrule
 \vspace{0.5em}
 
+У меня разнообразный опыт работы в науке, индустрии и организации образовательных проектов. Люблю машинное обучение и работу с людьми.
+
+\vspace{0.5em}
 \noindent {\textbf{Опыт работы}}
 \begin{longtable} {l | p{0.85\textwidth}}
 2019 — н.в. & {\textbf{\href{https://spbu.ru}{Санкт-Петербургский государственный университет}, Факультет математики и компьютерных наук, доцент и руководитель программы по анализу данных}} \\
 
-& {В 2019 запустил образовательную программу бакалавриата \href{https://maad.compscicenter.ru}{<<Науки о данных>>}, сразу ставшей популярной среди самых лучших абитуриентов России. В 2020 создал с нуля на грант министерства образования РФ \href{https://gsom.spbu.ru/all_news/event2021-02-04/}{Международный научно-методический центр СПбГУ}. Читаю \href{https://github.com/spbu-math-cs/ml-course/}{годовой курс машинного обучения} по современным подходам и провожу традиционные \href{https://sochisirius.ru/obuchenie/nauka/smena1078/5204}{смены в Сириусе}. Средняя студенческая оценка преподавания — 4,78 из 5,0.} \\
+& {В 2019 запустил образовательную программу бакалавриата \href{https://maad.compscicenter.ru}{<<Науки о данных>>}, сразу ставшей популярной среди самых лучших абитуриентов России. В 2020 создал с нуля на грант министерства образования РФ \href{https://gsom.spbu.ru/all_news/event2021-02-04/}{Международный научно-методический центр СПбГУ}. Читаю \href{https://github.com/spbu-math-cs/ml-course/}{годовой курс машинного обучения} по современным подходам и провожу традиционные \href{https://sochisirius.ru/obuchenie/nauka/smena1078/5204}{смены в Сириусе}. Средняя студенческая оценка преподавания — 4,78 из 5,0} \\
 
 2013 — н.в. & {\textbf{\href{https://compscicenter.ru}{Яндекс, CS center/Школа анализа данных}, куратор академических программ}} \\
 
 & {В 2013 запустил филиал ШАД в Новосибирске. В 2017 в сотрудничестве с компанией Jetbrains расширил филиал ШАДа до отделения \href{https://compscicenter.ru}{Computer science center}. В 2019 провел \href{https://sochisirius.ru/obuchenie/graduates/smena240/1174}{<<Интенсивный проектный практикум для разработчиков от Сириуса, Яндекса и ФКН ВШЭ>>}} \\
 
 2015 — 2018 & {\textbf{\href{https://yandex.ru/}{Яндекс}, аналитик-разработчик (data scientist)}} \\
-& {Дважды повысил точность организаций Справочника на 2\% и 3\% (главная цель команды). Автоматизировал и оптимизировал процессы актуализации данных в колл-центрах и в Толоке. Работал в группе из 6 человек: машинное обучение, разработка на Java, SQL, Python, немного С++; catboost.} \\
+& {Дважды повысил точность организаций Справочника на 2\% и 3\% (главная цель команды). Автоматизировал и оптимизировал процессы актуализации данных в колл-центрах и в Толоке (краудсорс). В команде из 6 человек использовали машинное обучение, писали на Java, SQL, Python, немного С++} \\
 
 2009 — 2015 & {\textbf{\href{http://www.ict.nsc.ru}{Институт вычислительных технологий СО РАН}, аспирант, научный сотрудник}}\\
 
@@ -52,9 +55,11 @@
 
 \end{longtable}
 
+\vspace{-1.0em}
+
 \noindent {\textbf{Навыки}}
 \begin{longtable} {p{0.5\textwidth}p{0.5\textwidth}}
-\vspace{-2.2em}
+\vspace{-2.7em}
 \begin{itemize}
 	\item Python (numpy, scikit-learn, matplotlib)
 	\item Java (spring, hibernate, immutables)
@@ -62,7 +67,7 @@
 	\item SQL, MapReduce, MPI, OpenMP
 \end{itemize}
 &
-\vspace{-2.2em}
+\vspace{-2.7em}
 \begin{itemize}
 	\item machine learning (catboost, neural nets)
 	\item алгоритмы, структуры данных
@@ -72,7 +77,7 @@
 \\
 \end{longtable}
 
-\vspace{-2.5em}
+\vspace{-3.1em}
 
 \noindent {\textbf{Образование \vspace{-0.5em}}}
 \begin{longtable} {cp{0.35\textwidth}p{0.38\textwidth}l}
