--- a/avalur_cv_en_detailed.tex
+++ b/avalur_cv_en_detailed.tex
@@ -22,12 +22,15 @@
 \vspace{0.5em}
 
 \noindent Saint-Petersburg, Russia $\bullet$ \href{mailto:ovalur@gmail.com}{ovalur@gmail.com} \faMobile~+7 913 718 53 78 \faSendO~ovalur
-% \faGithub
+\faGithub~avalur
 
 \vspace{0.5em}
 \hrule
 \vspace{0.5em}
 
+I have diverse experience in science, industry and organization of educational projects. I love machine learning and working with people.
+
+\vspace{0.5em}
 \noindent {\textbf{Work experience}}
 \begin{longtable} {l | p{0.85\textwidth}}
 
@@ -52,21 +55,22 @@ s
 
   \item 2021 — all budget positions of the Data Science program are filled with winners of All-Russian Olympiads, including two winners of the International Olympiad in Mathematics
 
-  \item 2021-2022 — I created and teach \href{https://github.com/spbu-math-cs/ml-course/}{one year machine learning course} with modern ML approaches. The average student's evaluation of teaching is 4,78 out of 5,0.
-\end{itemize}
-\\
+  \item 2021-2022 — I created and teach \href{https://github.com/spbu-math-cs/ml-course/}{one year machine learning course} with modern ML approaches. The average student's evaluation of teaching is 4,78 out of 5,0
+\end{itemize} \\
+
+\end{longtable}
+\newpage
+\begin{longtable} {l | p{0.85\textwidth}}
+
 2015 — 2018 & {\textbf{\href{https://yandex.ru/}{Yandex}, data scientist}} \\
 & \vspace{-1.5em} \begin{itemize}
-	\item I implemented a daily calculation of the attribute-metrics (existence, name, address, working time...) of accuracy of the Yandex organizations database
-	\end{itemize}
-\\
-& \vspace{-1.5em} \begin{itemize}
+	\item I implemented a daily calculation of the attribute-metrics (existence, name, address, working time etc.) of accuracy of the Yandex organizations database
 	\item I automated and optimized data update processes in call centers and in \href{https://toloka.yandex.ru}{Yandex.Toloka}. In particular I improved the effectiveness of updating by 20\%, using catboost to predict the likelihood of closing an organization
 	\item I increased the accuracy of the organizations database twice by 2\% and 3\%, highlighting the largest problems from the losses and correcting them. Firstly, fixed companies with inaccessible phones. Secondly, increased the accuracy of the time of work of organizations by their priority updating
 \end{itemize}
 \\
 2013 — present & {\textbf{\href{https://compscicenter.ru}{Yandex, CS center/Yandex Data School}, Academic Programs Manager}} \\
-& \begin{itemize}
+& \vspace{-1.5em} \begin{itemize}
 	\item 2013 — I launched a branch \href{https://yandexdataschool.ru}{Yandex Data School} in Novosibirsk
 	\item 2017 — in cooperation with JetBrains, I expanded the Yandex Data School branch to \href{https://compscicenter.ru}{Computer science center}
 	\item 2019 — co-leader and lecturer at \href{https://sochisirius.ru/obuchenie/graduates/smena240/1174}{<<Intensive project workshop for developers from Sirius, Yandex and the HSE CS>>}
@@ -74,8 +78,7 @@ s
 \end{itemize}
 \\
 2009 — 2015 & {\textbf{\href{http://www.ict.nsc.ru}{Institute of Computational Technologies SB RAS}, graduate student, researcher}}\\
-& \vspace{-1em}
-\begin{itemize}
+& \vspace{-1.5em} \begin{itemize}
 	\item I generalized to non-stationary geometry the method of solving the three-dimensional Reynolds equations of motion of an incompressible fluid
 	\item I accelerated calculations by 16 times, parallelizing the algorithm across blocks of the computational domain using MPI for processes with distributed memory (improvement of the Fortran software package available in the laboratory, $\sim$ 30 thousand lines of code)
 	\item I accelerated another 7 times, parallelizing the algorithm in one block using OpenMP-threads with shared memory
@@ -89,7 +92,6 @@ s
 
 \end{longtable}
 
-\vspace{-1em}
 \noindent {\textbf{Skills}}
 \begin{longtable} {p{0.5\textwidth}p{0.5\textwidth}}
 \vspace{-2em}
@@ -110,15 +112,14 @@ s
 \\
 \end{longtable}
 
-\vspace{-3em}
+\newpage
+
 \noindent {\textbf{Education}
 \begin{longtable} {cp{0.35\textwidth}p{0.38\textwidth}l}
 2013 — 2016	& \href{https://yandexdataschool.ru}{Yandex Data School} & machine learning, programming & graduate \vspace{0.25em}\\
 2009 — 2014	& \href{http://www.ict.nsc.ru/ru/education/postgraduate}{Graduate School of ICT SB RAS} & math modeling, numerical methods & PhD \vspace{0.25em}\\
 2003 — 2009	& \href{https://www.nsu.ru/n/mathematics-mechanics-department}{NSU, Department of Mechanics and Mathematics} & math & master \vspace{0.25em}\\
 \end{longtable}
-
-\newpage
 
 \noindent {\textbf{Online courses}
 \begin{longtable} {cp{0.35\textwidth}p{0.38\textwidth}l}
