--- a/avalur_cv_en_one_page.tex
+++ b/avalur_cv_en_one_page.tex
@@ -22,21 +22,24 @@
 \vspace{0.5em}
 
 \noindent Saint-Petersburg, Russia $\bullet$ \href{mailto:ovalur@gmail.com}{ovalur@gmail.com} \faMobile~+7 913 718 53 78 \faSendO~ovalur
-% \faGithub
+\faGithub~avalur
 
 \vspace{0.5em}
 \hrule
 \vspace{0.5em}
 
+I have diverse experience in science, industry and organization of educational projects. I love machine learning and working with people.
+
+\vspace{0.5em}
 \noindent {\textbf{Work experience}}
 \begin{longtable} {l | p{0.85\textwidth}}
 
 2019 — present & {\textbf{\href{https://spbu.ru}{Saint Petersburg State University}, Department of Mathematics and Computer Science, Associate Professor and head of the educational program in <<Data Science>>}} \\
 
-& {In 2019 I launched an educational bachelor's program \href{https://maad.compscicenter.ru}{<<Data Science>>}, which immediately became popular among the best applicants in Russia. In 2020, I created from scratch \href{https://gsom.spbu.ru/all_news/event2021-02-04/}{International Scientific and Methodological Center of St. Petersburg State University} (Russian Ministry of Education grant). I created and teach \href{https://github.com/spbu-math-cs/ml-course/}{one year machine learning course} with modern ML approaches. The average student's evaluation of teaching is 4,78 out of 5,0.} \\
+& {In 2019 I launched an educational bachelor's program \href{https://maad.compscicenter.ru}{<<Data Science>>}, which immediately became popular among the best applicants in Russia. In 2020, I created from scratch \href{https://gsom.spbu.ru/all_news/event2021-02-04/}{International Scientific and Methodological Center of St. Petersburg State University} (Russian Ministry of Education grant). I created and teach \href{https://github.com/spbu-math-cs/ml-course/}{one year machine learning course} with modern ML approaches. The average student's evaluation of teaching is 4,78 out of 5,0} \\
 
 2015 — 2018 & {\textbf{\href{https://yandex.ru/}{Yandex}, data scientist}} \\
-& {I increased the accuracy of the organizations database twice by 2\% and 3\% (the main goal of the team). I automated and optimized data update processes in call centers and in \href{https://toloka.yandex.ru}{Yandex.Toloka}. I worked in a group of six data scientists: development in Java, SQL, Python, a little bit of C++; catboost.}\\
+& {I increased the accuracy of the organizations database twice by 2\% and 3\% (the main goal of the team). I automated and optimized data update processes in call centers and in \href{https://toloka.yandex.ru}{Yandex.Toloka}. I worked in a group of six data scientists, we  developed soft in Java, SQL, Python, a little bit of C++}\\
 
 2013 — present & {\textbf{\href{https://compscicenter.ru}{Yandex, CS center/Yandex Data School}, Academic Programs Manager}} \\
 & {In 2013 I launched a branch \href{https://yandexdataschool.ru}{Yandex Data School} in Novosibirsk. In 2017 in cooperation with JetBrains, I expanded the Yandex Data School branch to \href{https://compscicenter.ru}{Computer science center}. In 2019 I organized open \href{https://habr.com/ru/company/JetBrains-education/blog/458042/}{Machine Learning training sessions} for Kaggle competition participants.} \\
