Delete instagram link for brevity

--- a/avalur_cv_detailed.tex
+++ b/avalur_cv_detailed.tex
@@ -139,6 +139,6 @@
 
 \noindent {\textbf{Вне работы}}
 
-\vspace{0.5em} Люблю проводить время с женой и дочкой, стараюсь по возможности регулярно заниматься спортом (плавание, скалолазание), есть в \href{https://www.instagram.com/ovalur/}{Insragram}
+\vspace{0.5em} Люблю проводить время с женой и двумя дочками.
 
 \end{document}
