--- a/avalur_cv_en_detailed.tex
+++ b/avalur_cv_en_detailed.tex
@@ -130,6 +130,6 @@ s
 \vspace{-2em}
 \noindent{\textbf{Out of work}}
 
-I like to spend time with my wife and daughter, and I have the \href{https://www.instagram.com/ovalur/}{Insragram}
+I like to spend time with my wife and two daughters.
 
 \end{document}
