--- a/avalur_cv_one_page.tex
+++ b/avalur_cv_one_page.tex
@@ -98,6 +98,6 @@
 
 \noindent {\textbf{Вне работы}}
 
-Люблю проводить время с женой и дочкой, стараюсь по возможности регулярно заниматься спортом (плавание, скалолазание), есть в \href{https://www.instagram.com/ovalur/}{Insragram}
+Люблю проводить время с женой и двумя дочками.
 
 \end{document}
