--- a/avalur_cv_en_one_page.tex
+++ b/avalur_cv_en_one_page.tex
@@ -93,6 +93,6 @@ I have diverse experience in science, industry and organization of educational p
 \vspace{-2em}
 \noindent{\textbf{Out of work}}
 
-I like to spend time with my wife and daughter, and I have the \href{https://www.instagram.com/ovalur/}{Insragram}
+I like to spend time with my wife and two daughters.
 
 \end{document}
