--- a/avalur_cv_detailed.tex
+++ b/avalur_cv_detailed.tex
@@ -107,9 +107,9 @@
 \vspace{-2.2em}
 \begin{itemize}
 	\item Python (numpy, scikit-learn, matplotlib)
-	\item Java (spring, hibernate, immutables)
+	\item Java (spring, hibernate), SQL
 	\item linux, git, ipython notebook
-	\item SQL, MapReduce, MPI, OpenMP
+	\item MapReduce, MPI, OpenMP
 \end{itemize}
 &
 \vspace{-2.2em}
