--- a/avalur_cv_one_page.tex
+++ b/avalur_cv_one_page.tex
@@ -62,9 +62,9 @@
 \vspace{-2.7em}
 \begin{itemize}
 	\item Python (numpy, scikit-learn, matplotlib)
-	\item Java (spring, hibernate, immutables)
+	\item Java (spring, hibernate), SQL
 	\item linux, git, ipython notebook
-	\item SQL, MapReduce, MPI, OpenMP
+	\item MapReduce, MPI, OpenMP
 \end{itemize}
 &
 \vspace{-2.7em}
