--- a/avalur_cv_en_detailed.tex
+++ b/avalur_cv_en_detailed.tex
@@ -116,7 +116,7 @@ s
 
 \noindent {\textbf{Education}
 \begin{longtable} {cp{0.35\textwidth}p{0.38\textwidth}l}
-2013 — 2016	& \href{https://yandexdataschool.ru}{Yandex Data School} & machine learning, programming & graduate \vspace{0.25em}\\
+2013 — 2016	& \href{https://yandexdataschool.ru}{Yandex Data School} & machine learning, programming & \href{https://academy.yandex.ru/dataschool/life}{graduate} \vspace{0.25em}\\
 2009 — 2014	& \href{http://www.ict.nsc.ru/ru/education/postgraduate}{Graduate School of ICT SB RAS} & math modeling, numerical methods & PhD \vspace{0.25em}\\
 2003 — 2009	& \href{https://www.nsu.ru/n/mathematics-mechanics-department}{NSU, Department of Mechanics and Mathematics} & math & master \vspace{0.25em}\\
 \end{longtable}
