Upgrade and reformat one-pagers

--- a/avalur_cv_one_page.tex
+++ b/avalur_cv_one_page.tex
@@ -15,6 +15,7 @@
 
 \usepackage{fontawesome}	% иконки скайпа, телефона, ... http://ctan.sharelatex.com/tex-archive/fonts/fontawesome/doc/fontawesome.pdf
 
+\setstretch{0.8}
 
 \begin{document}
 
@@ -22,44 +23,57 @@
 
 \vspace{0.5em}
 
-\noindent Санкт-Петербург, Россия $\bullet$ \href{mailto:ovalur@gmail.com}{ovalur@gmail.com} \faMobile~+7 913 718 53 78 \faSendO~ovalur
-% \faGithub
+\noindent Санкт-Петербург, Россия $\bullet$ \href{mailto:ovalur@gmail.com}{ovalur@gmail.com} \faMobile~+7 913 718 53 78
+% \faSendO~ovalur
+\faGithub~\href{https://github.com/avalur}{avalur}
 
 \vspace{0.5em}
 \hrule
 \vspace{0.5em}
 
-У меня разнообразный опыт работы в науке, индустрии и организации образовательных проектов. Люблю машинное обучение и работу с людьми.
+Руководитель проектов и аналитик с более чем 7-летним опытом работы в области машинного обучения и образовательных программ для ИТ-индустрии.
 
 \vspace{0.5em}
 \noindent {\textbf{Опыт работы}}
-\begin{longtable} {l | p{0.85\textwidth}}
-2019 — н.в. & {\textbf{\href{https://spbu.ru}{Санкт-Петербургский государственный университет}, Факультет математики и компьютерных наук, доцент и руководитель программы по анализу данных}} \\
+\begin{itemize}
+\item 2019 — н.в.: доцент и руководитель программы по анализу данных, \textbf{\href{https://spbu.ru}{Санкт-Петербургский государственный университет}, Факультет математики и компьютерных наук}
 
-& {В 2019 запустил образовательную программу бакалавриата \href{https://maad.compscicenter.ru}{<<Науки о данных>>}, сразу ставшей популярной среди самых лучших абитуриентов России. В 2020 создал с нуля на грант министерства образования РФ \href{https://gsom.spbu.ru/all_news/event2021-02-04/}{Международный научно-методический центр СПбГУ}. Читаю \href{https://github.com/spbu-math-cs/ml-course/}{годовой курс машинного обучения} по современным подходам и провожу традиционные \href{https://sochisirius.ru/obuchenie/nauka/smena1078/5204}{смены в Сириусе}. Средняя студенческая оценка преподавания — 4,78 из 5,0} \\
+\begin{itemize}
+	\item Запустил образовательную программу бакалавриата \href{https://maad.compscicenter.ru}{<<Науки о данных>>} в 2019, сразу ставшую популярной среди лучших абитуриентов России
+	\item Создал с нуля на грант министерства образования РФ \href{https://gsom.spbu.ru/all_news/event2021-02-04/}{Международный научно-методический центр СПбГУ} в 2020
+	\item Разработал и читаю \href{https://github.com/spbu-math-cs/ml-course/}{годовой курс машинного обучения} по современным подходам в машинном обучении. Средняя студенческая оценка преподавания — 4,78 из 5,0
+	\item Организую ежегодную \href{https://sochisirius.ru/obuchenie/nauka/smena1078/5204}{смену в Сириусе} по математике и компьютерным наукам
+\end{itemize}
 
-2013 — н.в. & {\textbf{\href{https://compscicenter.ru}{Яндекс, CS center/Школа анализа данных}, куратор академических программ}} \\
+\item 2013 — н.в.: куратор академических программ, \textbf{\href{https://compscicenter.ru}{Яндекс, CS center/Школа анализа данных}}
+\begin{itemize}
+	\item запустил филиал ШАД в Новосибирске в 2013
+	\item в сотрудничестве с компанией Jetbrains расширил филиал ШАД до отделения \href{https://compscicenter.ru}{Computer science center} в 2017
+	\item организовал \href{https://sochisirius.ru/obuchenie/graduates/smena240/1174}{<<Интенсивный проектный практикум для разработчиков от Сириуса, Яндекса и ФКН ВШЭ>>} в 2019
+\end{itemize}
 
-& {В 2013 запустил филиал ШАД в Новосибирске. В 2017 в сотрудничестве с компанией Jetbrains расширил филиал ШАДа до отделения \href{https://compscicenter.ru}{Computer science center}. В 2019 провел \href{https://sochisirius.ru/obuchenie/graduates/smena240/1174}{<<Интенсивный проектный практикум для разработчиков от Сириуса, Яндекса и ФКН ВШЭ>>}} \\
 
-2015 — 2018 & {\textbf{\href{https://yandex.ru/}{Яндекс}, аналитик-разработчик (data scientist)}} \\
-& {Дважды повысил точность организаций Справочника на 2\% и 3\% (главная цель команды). Автоматизировал и оптимизировал процессы актуализации данных в колл-центрах и в Толоке (краудсорс). В команде из 6 человек использовали машинное обучение, писали на Java, SQL, Python, немного С++} \\
+\item 2015 — 2018: аналитик-разработчик (data scientist), \textbf{\href{https://yandex.ru/}{Яндекс}}
+\begin{itemize}
+	\item Дважды повысил точность организаций Справочника на 2\% и 3\% (главная цель команды)
+	\item Автоматизировал и оптимизировал процессы актуализации данных в колл-центрах и в Толоке (краудсорс)
+	\item В команде из 6 человек применяли машинное обучение, писали на Java, SQL, Python, немного С++
+\end{itemize}
 
-2009 — 2015 & {\textbf{\href{http://www.ict.nsc.ru}{Институт вычислительных технологий СО РАН}, аспирант, научный сотрудник}}\\
-
-& {Разработал новую численную модель, учитывающую изменение во времени геометрии проточного тракта гидротурбины. Ускорил расчеты имеющимся в лаборатории комплексом программ на языке Fortran в 16 раз (MPI по блокам), и ещё в 7 раз (OpenMP-потоки внутри блока). Защитил \href{https://github.com/avalur/dissertation/blob/master/to_print/autoref_Avdyushenko.pdf}{кандидатскую диссертацию <<Новые численные модели гидродинамики турбомашин>>}.} \\
-
-2008 — 2014 & {\href{http://sesc.nsu.ru}{Специализированный учебно-научный центр НГУ}, преподаватель математики}\\
-2006 — 2017 & {организатор и член Жюри математических олимпиад: Всероссийская, Всесибирская, Турнир городов}\\
-2010 — 2013 & {\href{https://www.sovenok.academy/}{мат. кружок Совёнок}, организатор и преподаватель}\\
-
-\end{longtable}
-
-\vspace{-1.0em}
+\item 2009 — 2015: научный сотрудник, \textbf{\href{http://www.ict.nsc.ru}{Институт вычислительных технологий СО РАН}}
+\begin{itemize}
+	\item Разработал новую численную модель, учитывающую изменение во времени геометрии проточного тракта гидротурбины
+	\item Ускорил расчеты имеющимся в лаборатории комплексом программ на языке Fortran в 16 раз (MPI по блокам), и ещё в 7 раз (OpenMP-потоки внутри блока)
+	\item Защитил \href{https://github.com/avalur/dissertation/blob/master/to_print/autoref_Avdyushenko.pdf}{кандидатскую диссертацию <<Новые численные модели гидродинамики турбомашин>>}
+\end{itemize}
+% 2008 — 2014 & {\href{http://sesc.nsu.ru}{Специализированный учебно-научный центр НГУ}, преподаватель математики}\\
+% 2006 — 2017 & {организатор и член Жюри математических олимпиад: Всероссийская, Всесибирская, Турнир городов}\\
+% 2010 — 2013 & {\href{https://www.sovenok.academy/}{мат. кружок Совёнок}, организатор и преподаватель}\\
+\end{itemize}
 
 \noindent {\textbf{Навыки}}
 \begin{longtable} {p{0.5\textwidth}p{0.5\textwidth}}
-\vspace{-2.7em}
+\vspace{-2.0em}
 \begin{itemize}
 	\item Python (numpy, scikit-learn, matplotlib)
 	\item Java (spring, hibernate), SQL
@@ -67,34 +81,36 @@
 	\item MapReduce, MPI, OpenMP
 \end{itemize}
 &
-\vspace{-2.7em}
+\vspace{-2.0em}
 \begin{itemize}
 	\item machine learning (catboost, neural nets)
 	\item алгоритмы, структуры данных
 	\item математика (анализ, численные методы)
-	\item русский: родной, английский: intermediate, французский: débutant
+	\item русский: родной, английский: продвинутый, французский: базовый
 \end{itemize}
 \\
 \end{longtable}
 
-\vspace{-3.1em}
+\vspace{-2.5em}
 
 \noindent {\textbf{Образование \vspace{-0.5em}}}
-\begin{longtable} {cp{0.35\textwidth}p{0.38\textwidth}l}
-2013 — 2016	& \href{https://yandexdataschool.ru}{Школа анализа данных, Яндекс} & программирование, машинное обучение & \href{https://academy.yandex.ru/dataschool/life}{выпускник} \vspace{0.5em}\\
-2009 — 2014	& \href{http://www.ict.nsc.ru/ru/education/postgraduate}{аспирантура ИВТ СО РАН} & мат. моделирование, численные методы & к.ф.-м.н \vspace{0.5em}\\
-2003 — 2009	& \href{https://www.nsu.ru/n/mathematics-mechanics-department/}{НГУ, механико-математический факультет} & математика & магистр \vspace{0.5em}\\
+\begin{longtable} {p{0.3\textwidth}p{0.5\textwidth}l}
+  магистр математики & \href{https://www.nsu.ru/}{Новосибирский государственный университет} & 2009 \vspace{0.5em} \\
+	к.ф.-м.н & \href{http://www.ict.nsc.ru/ru/education/postgraduate}{аспирантура ИВТ СО РАН} & 2014 \vspace{0.5em}\\
+  \href{https://academy.yandex.ru/dataschool/life}{выпускник} & \href{https://yandexdataschool.ru}{Школа анализа данных, Яндекс} & 2016 \vspace{0.5em}\\
 \end{longtable}
 
-\vspace{-1.5em}
+\vspace{-1.0em}
 
-\noindent {\textbf{Онлайн-курсы \vspace{-0.5em}}}
-\begin{longtable} {cp{0.35\textwidth}p{0.38\textwidth}l}
-2017 & Coursera, University of Washington & Programming Languages, parts A, B, C & 	сертификат \vspace{0.5em}\\
-2019 & Coursera, HSE University & How to Win a Data Science Competition: Learn from Top Kagglers & сертификат \vspace{0.5em}\\
+\noindent {\textbf{Профессиональное развитие}}
+\vspace{-0.5em}
+\begin{longtable} {p{0.35\textwidth}p{0.25\textwidth}ll}
+	Programming Languages, parts A, B, C &
+	University of Washington & \href{https://coursera.org/share/3e187e640ed6df57b0a84ecb8a82ddab}{Coursera сертификат} & 2017 \vspace{0.5em}\\
+	How to Win a Data Science Competition & HSE University & \href{https://coursera.org/share/0ad3f02a08a405800c29d5909caece90}{Coursera сертификат} & 2019   \vspace{0.5em}\\
 \end{longtable}
 
-\vspace{-2.0em}
+\vspace{-1.0em}
 
 \noindent {\textbf{Вне работы}}
 
