--- a/avalur_cv_en_one_page.tex
+++ b/avalur_cv_en_one_page.tex
@@ -15,46 +15,65 @@
 
 \usepackage{fontawesome}	% иконки скайпа, телефона, ... http://ctan.sharelatex.com/tex-archive/fonts/fontawesome/doc/fontawesome.pdf
 
+\setstretch{0.8}
+
 \begin{document}
 
 \noindent {\Huge{\textbf{Aleksandr Avdiushenko}}}%
 
 \vspace{0.5em}
 
-\noindent Saint-Petersburg, Russia $\bullet$ \href{mailto:ovalur@gmail.com}{ovalur@gmail.com} \faMobile~+7 913 718 53 78 \faSendO~ovalur
-\faGithub~avalur
+\noindent Saint-Petersburg, Russia $\bullet$ \href{mailto:ovalur@gmail.com}{ovalur@gmail.com} % \faMobile
+$\bullet$~+7 913 718 53 78
+% \faSendO~ovalur
+\faGithub~\href{https://github.com/avalur}{avalur}
 
 \vspace{0.5em}
 \hrule
 \vspace{0.5em}
 
-I have diverse experience in science, industry and organization of educational projects. I love machine learning and working with people.
+Project Manager and Data Scientist with 7+ years of experience in data science, analysis, and educational programs for the IT industry.
 
 \vspace{0.5em}
 \noindent {\textbf{Work experience}}
-\begin{longtable} {l | p{0.85\textwidth}}
+\begin{itemize}
+ \item 2019 — present:
+ Associate Professor and Head of the educational program in <<Data Science>>,  \textbf{\href{https://spbu.ru}{Saint Petersburg State University}, Department of Mathematics and Computer Science}
+ \begin{itemize}
+	 \item Launched new educational program \href{https://maad.compscicenter.ru}{<<Data Science>>} in 2019, which immediately became popular among the best applicants in Russia
+	 \item Created from scratch \href{https://gsom.spbu.ru/all_news/event2021-02-04/}{International Scientific and Methodological Center of St. Petersburg State University} (Russian Ministry of Education grant) in 2020
+	 \item Created and teach \href{https://github.com/spbu-math-cs/ml-course/}{one year machine learning course} with modern ML approaches. The average student's evaluation of teaching is 4,78 out of 5,0
+ \end{itemize}
 
-2019 — present & {\textbf{\href{https://spbu.ru}{Saint Petersburg State University}, Department of Mathematics and Computer Science, Associate Professor and head of the educational program in <<Data Science>>}} \\
+  \item 2015 — 2018:
+	Data Scientist, \textbf{\href{https://yandex.ru/}{Yandex} }
+	\begin{itemize}
+		\item Increased the accuracy of the organizations database twice by 2\% and 3\% (the main goal of the team)
+		\item Automated and optimized data update processes in call centers and in \href{https://toloka.yandex.ru}{Yandex.Toloka}
+		\item Worked in a group of six data scientists. We developed soft in Java, SQL, Python, a little bit of C++
+	\end{itemize}
 
-& {In 2019 I launched an educational bachelor's program \href{https://maad.compscicenter.ru}{<<Data Science>>}, which immediately became popular among the best applicants in Russia. In 2020, I created from scratch \href{https://gsom.spbu.ru/all_news/event2021-02-04/}{International Scientific and Methodological Center of St. Petersburg State University} (Russian Ministry of Education grant). I created and teach \href{https://github.com/spbu-math-cs/ml-course/}{one year machine learning course} with modern ML approaches. The average student's evaluation of teaching is 4,78 out of 5,0} \\
+  \item 2013 — present:
+	Academic Programs Manager, \textbf{\href{https://compscicenter.ru}{Yandex, CS center/Yandex Data School}}
+	\begin{itemize}
+		\item Launched a branch of \href{https://yandexdataschool.ru}{Yandex Data School} in Novosibirsk in 2013
+		\item Expanded the Yandex Data School branch in cooperation with JetBrains to \href{https://compscicenter.ru}{Computer science center} in 2017
+		\item Organized open \href{https://habr.com/ru/company/JetBrains-education/blog/458042/}{Machine Learning training sessions} for Kaggle competition participants in 2019
+	\end{itemize}
 
-2015 — 2018 & {\textbf{\href{https://yandex.ru/}{Yandex}, data scientist}} \\
-& {I increased the accuracy of the organizations database twice by 2\% and 3\% (the main goal of the team). I automated and optimized data update processes in call centers and in \href{https://toloka.yandex.ru}{Yandex.Toloka}. I worked in a group of six data scientists, we  developed soft in Java, SQL, Python, a little bit of C++}\\
+  \item 2009 — 2015:
+	Researcher, \textbf{\href{http://www.ict.nsc.ru}{Institute of Computational Technologies SB RAS}}
+	\begin{itemize}
+		\item Developed a new numerical model that takes into account the change in the geometry of the flow path over time
+		\item Accelerated calculations by the Fortran language software package available in the laboratory by 16 times (MPI per block), and another 7 times (OpenMP flows inside the block)
+		\item Made \href{https://github.com/avalur/dissertation/blob/master/to_print/autoref_Avdyushenko.pdf}{PhD thesis (in russian)}
+	\end{itemize}
 
-2013 — present & {\textbf{\href{https://compscicenter.ru}{Yandex, CS center/Yandex Data School}, Academic Programs Manager}} \\
-& {In 2013 I launched a branch \href{https://yandexdataschool.ru}{Yandex Data School} in Novosibirsk. In 2017 in cooperation with JetBrains, I expanded the Yandex Data School branch to \href{https://compscicenter.ru}{Computer science center}. In 2019 I organized open \href{https://habr.com/ru/company/JetBrains-education/blog/458042/}{Machine Learning training sessions} for Kaggle competition participants.} \\
+  % \item 2008 — 2014: math teacher, \href{http://sesc.nsu.ru}{Specialized Educational and Scientific Center NSU}
+  % \item 2006 — 2017: organizer and member of the Jury of Mathematical Olympiads: All-Russian, All-Siberian, Tournament of cities
+  % \item 2010 — 2013: organizer and teacher, \href{https://www.sovenok.academy/}{math club <<Sovenok>>}
+\end{itemize}
 
-2009 — 2015 & {\textbf{\href{http://www.ict.nsc.ru}{Institute of Computational Technologies SB RAS}, graduate student, researcher}}\\
-
-& {I developed a new numerical model that takes into account the change in the geometry of the flow path over time. I accelerated calculations by the Fortran language software package available in the laboratory by 16 times (MPI per block), and another 7 times (OpenMP flows inside the block). I made \href{https://github.com/avalur/dissertation/blob/master/to_print/autoref_Avdyushenko.pdf}{PhD thesis (in russian)}.} \\
-
-2008 — 2014 & {\href{http://sesc.nsu.ru}{Specialized Educational and Scientific Center NSU}, math teacher}\\
-2006 — 2017 & {organizer and member of the Jury of Mathematical Olympiads: All-Russian, All-Siberian, Tournament of cities}\\
-2010 — 2013 & {\href{https://www.sovenok.academy/}{math club <<Sovenok>>}, organizer and teacher}\\
-
-\end{longtable}
-
-\vspace{-1em}
 \noindent {\textbf{Skills}}
 \begin{longtable} {p{0.5\textwidth}p{0.5\textwidth}}
 \vspace{-2em}
@@ -70,27 +89,29 @@ I have diverse experience in science, industry and organization of educational p
 	\item machine learning (catboost, neural nets)
 	\item algorithms, data structures
 	\item math: analysis, numerical methods
-	\item Russian: native, English: intermediate, French: débutant
+	\item Russian: native, English: intermediate, French: beginner
 \end{itemize}
 \\
 \end{longtable}
 
-\vspace{-3em}
-\noindent {\textbf{Education}
-\begin{longtable} {cp{0.35\textwidth}p{0.38\textwidth}l}
-2013 — 2016	& \href{https://yandexdataschool.ru}{Yandex Data School} & machine learning, programming & \href{https://academy.yandex.ru/dataschool/life}{graduate} \vspace{0.25em}\\
-2009 — 2014	& \href{http://www.ict.nsc.ru/ru/education/postgraduate}{Graduate School of ICT SB RAS} & math modeling, numerical methods & PhD \vspace{0.25em}\\
-2003 — 2009	& \href{https://www.nsu.ru/n/mathematics-mechanics-department}{NSU, Department of Mechanics and Mathematics} & math & master \vspace{0.25em}\\
-\end{longtable}
-
 \vspace{-1.5em}
-\noindent {\textbf{Online courses}
-\begin{longtable} {cp{0.35\textwidth}p{0.38\textwidth}l}
-2017 & Coursera, University of Washington & Programming Languages, parts A, B, C & 	certificate \vspace{0.5em}\\
-2019 & Coursera, HSE University & How to Win a Data Science Competition: Learn from Top Kagglers & certificate \vspace{0.5em}\\
+\noindent {\textbf{Education}
+\vspace{-0.5em}
+\begin{longtable} {p{0.3\textwidth}p{0.3\textwidth}l}
+  Master degree in Math & \href{https://english.nsu.ru/}{Novosibirsk State University} &
+	 2009	\vspace{0.5em}\\
+  PhD in Math modeling & \href{http://www.ict.nsc.ru/ru/education/postgraduate}{Graduate School of ICT SB RAS} & 2014 \vspace{0.5em}\\
+	\href{https://academy.yandex.ru/dataschool/life}{Graduate}, Machine learning & \href{https://yandexdataschool.ru}{Yandex Data School} & 2016 \vspace{0.5em}\\
 \end{longtable}
 
-\vspace{-2em}
+\noindent {\textbf{Professional development}
+\vspace{-0.5em}
+\begin{longtable} {p{0.35\textwidth}p{0.25\textwidth}ll}
+Programming Languages, parts A, B, C &
+University of Washington & \href{https://coursera.org/share/3e187e640ed6df57b0a84ecb8a82ddab}{ Coursera certificate }& 2017 \vspace{0.5em}\\
+How to Win a Data Science Competition & HSE University & \href{https://coursera.org/share/0ad3f02a08a405800c29d5909caece90}{ Coursera certificate } & 2019 \vspace{0.5em}\\
+\end{longtable}
+
 \noindent{\textbf{Out of work}}
 
 I like to spend time with my wife and two daughters.
